hw/1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: otus-app
    template:
       metadata:
          labels:
             app: otus-app
       spec:
          containers:
          - name: otus-hello-py
            image: myotsid/hello-py:v1
            ports:
              - name: web 
                containerPort: 8000
