hw/1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"               
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(otusapp/.*/)(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-service
              port:
                number: 8000
        - path: /((.*))
          pathType: Prefix
          backend:
            service:
              name: otus-service
              port:
                number: 8000
